/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn more about Gradle by exploring our samples at https://docs.gradle.org/7.4/samples
 * This project uses @Incubating APIs which are subject to change.
 */


/********
* PLUGINS
*********/

plugins {
    id "java"
    id "jacoco"
    id "checkstyle"
    id "com.github.spotbugs" version "5.0.4"
    id "com.github.kt3k.coveralls" version "2.12.0"
    id "application"
    id "eclipse"
    id 'idea'
}



/********************************
* APP PROPERTIES AND DEPENDENCIES
*********************************/

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    // JUnit 5
    testImplementation(platform('org.junit:junit-bom:5.8.2'))
	testImplementation('org.junit.jupiter:junit-jupiter')
    compileOnly("com.github.spotbugs:spotbugs-annotations:${spotbugs.toolVersion.get()}")
    // FlatLaf (usato per GUI abbinato a Swing)
    implementation 'com.formdev:flatlaf:3.6.2'
}



/**************
* PLUGINS SETUP
***************/

/*
*   Checkstyle
*/
checkstyle {
	// Whether to allow the build to continue if there are warnings.
    // (default: ignoreFailures = false)
	ignoreFailures = true
	toolVersion "10.1"
}

/*
*   Spotbugs
*/
spotbugs {
    ignoreFailures = true
    toolVersion = "4.5.3"
    reportsDir = file("$buildDir/reports/spotbugs")
}

/*
*   JaCoCo
*/
jacocoTestReport {
    // Definiamo quali classi escludere dal testing
    def fileFilter = [
        '**/App.class', // Esclude la classe App
        '**/App$*.class', // Esclude eventuali classi interne di App
        '**/WordleFrame.class', // Esclude la GUI del Wordle
        '**/WordleFrame$*.class' // Esclude eventuali classi interne o listener di WordleFrame

        // Escludo App perché il main è difficilmente testabile e 
        // andrebbe solo a ridurre la percentuale di coverage senza senso
    ]

    // Applichiamo il filtro alle classi compilate
    classDirectories.setFrom(files(classDirectories.files.collect {
        fileTree(dir: it, exclude: fileFilter)
    }))

    // Show code coverage results
    group = "Reporting"
    description = "Generate Jacoco coverage reports after running tests."
    executionData(fileTree(project.rootDir.absolutePath).include("**/${buildDir}/jacoco/*.exec"))

    reports {
        xml.required = true
        csv.required = false
        xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
        html.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport_html/")
    }
}

/*
*   Coveralls
*/
coveralls {
    jacocoReportPath 'build/reports/jacoco/test/jacocoTestReport.xml'
}

/*
*   Eclispe
*/
eclipse {
	project {
		name = 'wordle'
	}
}


/***********
* TASK SETUP
************/

checkstyleMain {
    source = 'src/main/java'
}

checkstyleTest {
    source ='src/test/java'
}

spotbugsMain {
    reports {
        html.required = true
        text.required = true
    }
}

spotbugsTest {
    reports {
        html.required = true
        text.required = true
    }
}

run {
    standardInput = System.in
}
// To run the program via Gradle, invoke the `run` task as follows.
// ./gradlew run -q --console=plain

test {
    // Use JUnit 5
    useJUnitPlatform()

    // Always run tests, even when nothing changed.
    dependsOn 'cleanTest'

    // Show test results.
    testLogging {
        events "passed", "skipped", "failed"
    }

    finalizedBy jacocoTestReport
}

// Print spotbugs report (for the `main` sourceset) to the console
task spotbugsMainReport {
    doLast {
        if(file("$buildDir/reports/spotbugs/main.txt").exists()) {
            file("$buildDir/reports/spotbugs/main.txt").readLines().forEach {
                println( it )
            }
        }

    }
}
tasks.getByName('spotbugsMain').finalizedBy('spotbugsMainReport')

// Print spotbugs report (for the `test` sourceset) to the console
task spotbugsTestReport {
    doLast {
        if(file("$buildDir/reports/spotbugs/test.txt").exists()){
            file("$buildDir/reports/spotbugs/test.txt").readLines().forEach {
                println( it )
            }
        }
    }
}
tasks.getByName('spotbugsTest').finalizedBy('spotbugsTestReport')

// Generate the executable Jar (to be included in the Docker container)
task fatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'it.uniba.app.App'
    }
    archiveBaseName = project.name + '-all'
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}
project.tasks.getByName('build').dependsOn fatJar


/***********************
* MAIN CLASS DECLARATION
************************/

mainClassName = 'it.uniba.app.App'